_generated-config/1.7/config/quarkus-knative-knative-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-knative-knative-config_configuration]]link:#quarkus-knative-knative-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.part-of]]`link:#quarkus-knative-knative-config_quarkus.knative.part-of[quarkus.knative.part-of]`

[.description]
--
The name of the group this component belongs too
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.name]]`link:#quarkus-knative-knative-config_quarkus.knative.name[quarkus.knative.name]`

[.description]
--
The name of the application. This value will be used for naming Kubernetes resources like: - Deployment - Service and so on ...
--|string 
|`${quarkus.container-image.name}`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.version]]`link:#quarkus-knative-knative-config_quarkus.knative.version[quarkus.knative.version]`

[.description]
--
The version of the application.
--|string 
|`${quarkus.container-image.tag}`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.namespace]]`link:#quarkus-knative-knative-config_quarkus.knative.namespace[quarkus.knative.namespace]`

[.description]
--
The namespace the generated resources should belong to. If not value is set, then the 'namespace' field will not be added to the 'metadata' section of the generated manifests. This in turn means that when the manifests are applied to a cluster, the namespace will be resolved from the current Kubernetes context (see https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/++#++context for more details).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.add-build-timestamp]]`link:#quarkus-knative-knative-config_quarkus.knative.add-build-timestamp[quarkus.knative.add-build-timestamp]`

[.description]
--
Whether or not to add the build timestamp to the Kubernetes annotations This is a very useful way to have manifests of successive builds of the same application differ - thus ensuring that Kubernetes will apply the updated resources
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.working-dir]]`link:#quarkus-knative-knative-config_quarkus.knative.working-dir[quarkus.knative.working-dir]`

[.description]
--
Working directory
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.command]]`link:#quarkus-knative-knative-config_quarkus.knative.command[quarkus.knative.command]`

[.description]
--
The commands
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.arguments]]`link:#quarkus-knative-knative-config_quarkus.knative.arguments[quarkus.knative.arguments]`

[.description]
--
The arguments
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.service-account]]`link:#quarkus-knative-knative-config_quarkus.knative.service-account[quarkus.knative.service-account]`

[.description]
--
The service account
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.host]]`link:#quarkus-knative-knative-config_quarkus.knative.host[quarkus.knative.host]`

[.description]
--
The host under which the application is going to be exposed
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.service-type]]`link:#quarkus-knative-knative-config_quarkus.knative.service-type[quarkus.knative.service-type]`

[.description]
--
The type of service that will be generated for the application
--|`cluster-ip`, `node-port`, `load-balancer`, `external-name` 
|`cluster-ip`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.image-pull-policy]]`link:#quarkus-knative-knative-config_quarkus.knative.image-pull-policy[quarkus.knative.image-pull-policy]`

[.description]
--
Image pull policy
--|`always`, `if-not-present`, `never` 
|`always`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.image-pull-secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.image-pull-secrets[quarkus.knative.image-pull-secrets]`

[.description]
--
The image pull secret
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.http-action-path[quarkus.knative.liveness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.exec-action[quarkus.knative.liveness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.tcp-socket-action[quarkus.knative.liveness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.initial-delay[quarkus.knative.liveness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.period[quarkus.knative.liveness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.timeout[quarkus.knative.liveness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.success-threshold[quarkus.knative.liveness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.liveness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.liveness-probe.failure-threshold[quarkus.knative.liveness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.http-action-path[quarkus.knative.readiness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.exec-action[quarkus.knative.readiness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.tcp-socket-action[quarkus.knative.readiness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.initial-delay[quarkus.knative.readiness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.period[quarkus.knative.readiness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.timeout[quarkus.knative.readiness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.success-threshold[quarkus.knative.readiness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.readiness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.readiness-probe.failure-threshold[quarkus.knative.readiness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.env.secrets[quarkus.knative.env.secrets]`

[.description]
--
The optional list of Secret names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.configmaps]]`link:#quarkus-knative-knative-config_quarkus.knative.env.configmaps[quarkus.knative.env.configmaps]`

[.description]
--
The optional list of ConfigMap names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.cluster-local]]`link:#quarkus-knative-knative-config_quarkus.knative.cluster-local[quarkus.knative.cluster-local]`

[.description]
--
Whether or not this service is cluster-local. Cluster local services are not exposed to the outside world.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.min-scale]]`link:#quarkus-knative-knative-config_quarkus.knative.min-scale[quarkus.knative.min-scale]`

[.description]
--
This value controls the minimum number of replicas each revision should have. Knative will attempt to never have less than this number of replicas at any one point in time.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.max-scale]]`link:#quarkus-knative-knative-config_quarkus.knative.max-scale[quarkus.knative.max-scale]`

[.description]
--
This value controls the maximum number of replicas each revision should have. Knative will attempt to never have more than this number of replicas running, or in the process of being created, at any one point in time.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.scale-to-zero-enabled]]`link:#quarkus-knative-knative-config_quarkus.knative.scale-to-zero-enabled[quarkus.knative.scale-to-zero-enabled]`

[.description]
--
The scale-to-zero values control whether Knative allows revisions to scale down to zero, or stops at “1”.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.auto-scaler-class]]`link:#quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.auto-scaler-class[quarkus.knative.revision-auto-scaling.auto-scaler-class]`

[.description]
--

--|`kpa`, `hpa` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.metric]]`link:#quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.metric[quarkus.knative.revision-auto-scaling.metric]`

[.description]
--

--|`concurrency`, `rps`, `cpu` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.target]]`link:#quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.target[quarkus.knative.revision-auto-scaling.target]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.container-concurrency]]`link:#quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.container-concurrency[quarkus.knative.revision-auto-scaling.container-concurrency]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage]]`link:#quarkus-knative-knative-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage[quarkus.knative.revision-auto-scaling.target-utilization-percentage]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.auto-scaler-class]]`link:#quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.auto-scaler-class[quarkus.knative.global-auto-scaling.auto-scaler-class]`

[.description]
--

--|`kpa`, `hpa` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.container-concurrency]]`link:#quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.container-concurrency[quarkus.knative.global-auto-scaling.container-concurrency]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.target-utilization-percentage]]`link:#quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.target-utilization-percentage[quarkus.knative.global-auto-scaling.target-utilization-percentage]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.requests-per-second]]`link:#quarkus-knative-knative-config_quarkus.knative.global-auto-scaling.requests-per-second[quarkus.knative.global-auto-scaling.requests-per-second]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.labels-labels]]`link:#quarkus-knative-knative-config_quarkus.knative.labels-labels[quarkus.knative.labels]`

[.description]
--
Custom labels to add to all resources
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.annotations-annotations]]`link:#quarkus-knative-knative-config_quarkus.knative.annotations-annotations[quarkus.knative.annotations]`

[.description]
--
Custom annotations to add to all resources
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.ports.-ports-.container-port]]`link:#quarkus-knative-knative-config_quarkus.knative.ports.-ports-.container-port[quarkus.knative.ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.ports.-ports-.host-port]]`link:#quarkus-knative-knative-config_quarkus.knative.ports.-ports-.host-port[quarkus.knative.ports."ports".host-port]`

[.description]
--
The host port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.ports.-ports-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.ports.-ports-.path[quarkus.knative.ports."ports".path]`

[.description]
--
The application path (refers to web application path).
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.ports.-ports-.protocol]]`link:#quarkus-knative-knative-config_quarkus.knative.ports.-ports-.protocol[quarkus.knative.ports."ports".protocol]`

[.description]
--
The protocol.
--|`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.name]]`link:#quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.name[quarkus.knative.mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.path[quarkus.knative.mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.sub-path]]`link:#quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.sub-path[quarkus.knative.mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.mounts.-mounts-.read-only[quarkus.knative.mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name]]`link:#quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.secret-name[quarkus.knative.secret-volumes."secret-volumes".secret-name]`

[.description]
--
The name of the secret to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode]]`link:#quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.default-mode[quarkus.knative.secret-volumes."secret-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.optional]]`link:#quarkus-knative-knative-config_quarkus.knative.secret-volumes.-secret-volumes-.optional[quarkus.knative.secret-volumes."secret-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.config-map-name]]`link:#quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.config-map-name[quarkus.knative.config-map-volumes."config-map-volumes".config-map-name]`

[.description]
--
The name of the ConfigMap to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.default-mode]]`link:#quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.default-mode[quarkus.knative.config-map-volumes."config-map-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.optional]]`link:#quarkus-knative-knative-config_quarkus.knative.config-map-volumes.-config-map-volumes-.optional[quarkus.knative.config-map-volumes."config-map-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.repository]]`link:#quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.repository[quarkus.knative.git-repo-volumes."git-repo-volumes".repository]`

[.description]
--
Git repoistory URL.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.directory]]`link:#quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.directory[quarkus.knative.git-repo-volumes."git-repo-volumes".directory]`

[.description]
--
The directory of the repository to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.revision]]`link:#quarkus-knative-knative-config_quarkus.knative.git-repo-volumes.-git-repo-volumes-.revision[quarkus.knative.git-repo-volumes."git-repo-volumes".revision]`

[.description]
--
The commit hash to use.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.claim-name]]`link:#quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.claim-name[quarkus.knative.pvc-volumes."pvc-volumes".claim-name]`

[.description]
--
The name of the claim to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.default-mode]]`link:#quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.default-mode[quarkus.knative.pvc-volumes."pvc-volumes".default-mode]`

[.description]
--
Default mode. When specifying an octal number, leading zero must be present.
--|string 
|`0600`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.optional]]`link:#quarkus-knative-knative-config_quarkus.knative.pvc-volumes.-pvc-volumes-.optional[quarkus.knative.pvc-volumes."pvc-volumes".optional]`

[.description]
--
Optional
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.volume-id]]`link:#quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.volume-id[quarkus.knative.aws-elastic-block-store-volumes."aws-elastic-block-store-volumes".volume-id]`

[.description]
--
The name of the disk to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.partition]]`link:#quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.partition[quarkus.knative.aws-elastic-block-store-volumes."aws-elastic-block-store-volumes".partition]`

[.description]
--
The partition.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.fs-type]]`link:#quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.fs-type[quarkus.knative.aws-elastic-block-store-volumes."aws-elastic-block-store-volumes".fs-type]`

[.description]
--
Filesystem type.
--|string 
|`ext4`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.aws-elastic-block-store-volumes.-aws-elastic-block-store-volumes-.read-only[quarkus.knative.aws-elastic-block-store-volumes."aws-elastic-block-store-volumes".read-only]`

[.description]
--
Wether the volumeName is read only or not.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.share-name]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.share-name[quarkus.knative.azure-file-volumes."azure-file-volumes".share-name]`

[.description]
--
The share name.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.secret-name]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.secret-name[quarkus.knative.azure-file-volumes."azure-file-volumes".secret-name]`

[.description]
--
The secret name.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-file-volumes.-azure-file-volumes-.read-only[quarkus.knative.azure-file-volumes."azure-file-volumes".read-only]`

[.description]
--
Wether the volumeName is read only or not.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.disk-name]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.disk-name[quarkus.knative.azure-disk-volumes."azure-disk-volumes".disk-name]`

[.description]
--
The name of the disk to mount.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.disk-uri]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.disk-uri[quarkus.knative.azure-disk-volumes."azure-disk-volumes".disk-uri]`

[.description]
--
The URI of the vhd blob object OR the resourceID of an Azure managed data disk if Kind is Managed
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.kind]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.kind[quarkus.knative.azure-disk-volumes."azure-disk-volumes".kind]`

[.description]
--
Kind of disk.
--|`managed`, `shared` 
|`managed`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.caching-mode]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.caching-mode[quarkus.knative.azure-disk-volumes."azure-disk-volumes".caching-mode]`

[.description]
--
Disk caching mode.
--|`read-write`, `read-only`, `none` 
|`read-write`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.fs-type]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.fs-type[quarkus.knative.azure-disk-volumes."azure-disk-volumes".fs-type]`

[.description]
--
File system type.
--|string 
|`ext4`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.azure-disk-volumes.-azure-disk-volumes-.read-only[quarkus.knative.azure-disk-volumes."azure-disk-volumes".read-only]`

[.description]
--
Wether the volumeName is read only or not.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image[quarkus.knative.init-containers."init-containers".image]`

[.description]
--
The container image.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.working-dir]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.working-dir[quarkus.knative.init-containers."init-containers".working-dir]`

[.description]
--
Working directory.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.command]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.command[quarkus.knative.init-containers."init-containers".command]`

[.description]
--
The commands
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.arguments]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.arguments[quarkus.knative.init-containers."init-containers".arguments]`

[.description]
--
The arguments
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.service-account]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.service-account[quarkus.knative.init-containers."init-containers".service-account]`

[.description]
--
The service account.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.host]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.host[quarkus.knative.init-containers."init-containers".host]`

[.description]
--
The host under which the application is going to be exposed.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.container-port]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.container-port[quarkus.knative.init-containers."init-containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.host-port]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.host-port[quarkus.knative.init-containers."init-containers".ports."ports".host-port]`

[.description]
--
The host port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.path[quarkus.knative.init-containers."init-containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.protocol]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.protocol[quarkus.knative.init-containers."init-containers".ports."ports".protocol]`

[.description]
--
The protocol.
--|`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image-pull-policy]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image-pull-policy[quarkus.knative.init-containers."init-containers".image-pull-policy]`

[.description]
--
Image pull policy.
--|`always`, `if-not-present`, `never` 
|`always`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image-pull-secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.image-pull-secrets[quarkus.knative.init-containers."init-containers".image-pull-secrets]`

[.description]
--
The image pull secret
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.name]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.name[quarkus.knative.init-containers."init-containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.path[quarkus.knative.init-containers."init-containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.sub-path[quarkus.knative.init-containers."init-containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.mounts.-mounts-.read-only[quarkus.knative.init-containers."init-containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.secrets[quarkus.knative.init-containers."init-containers".env.secrets]`

[.description]
--
The optional list of Secret names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.configmaps]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.configmaps[quarkus.knative.init-containers."init-containers".env.configmaps]`

[.description]
--
The optional list of ConfigMap names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.fields-fields]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.fields-fields[quarkus.knative.init-containers."init-containers".env.fields]`

[.description]
--
The map associating environment variable names to their associated field references they take their value from.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.vars-vars]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.vars-vars[quarkus.knative.init-containers."init-containers".env.vars]`

[.description]
--
The map associating environment name to its associated value.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.from-secret]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.from-secret[quarkus.knative.init-containers."init-containers".env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.from-configmap]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.from-configmap[quarkus.knative.init-containers."init-containers".env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.with-key]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.env.mapping.-mapping-.with-key[quarkus.knative.init-containers."init-containers".env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image[quarkus.knative.containers."containers".image]`

[.description]
--
The container image.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.working-dir]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.working-dir[quarkus.knative.containers."containers".working-dir]`

[.description]
--
Working directory.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.command]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.command[quarkus.knative.containers."containers".command]`

[.description]
--
The commands
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.arguments]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.arguments[quarkus.knative.containers."containers".arguments]`

[.description]
--
The arguments
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.service-account]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.service-account[quarkus.knative.containers."containers".service-account]`

[.description]
--
The service account.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.host]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.host[quarkus.knative.containers."containers".host]`

[.description]
--
The host under which the application is going to be exposed.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.container-port]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.container-port[quarkus.knative.containers."containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.host-port]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.host-port[quarkus.knative.containers."containers".ports."ports".host-port]`

[.description]
--
The host port.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.path[quarkus.knative.containers."containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.protocol]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.ports.-ports-.protocol[quarkus.knative.containers."containers".ports."ports".protocol]`

[.description]
--
The protocol.
--|`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image-pull-policy]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image-pull-policy[quarkus.knative.containers."containers".image-pull-policy]`

[.description]
--
Image pull policy.
--|`always`, `if-not-present`, `never` 
|`always`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image-pull-secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.image-pull-secrets[quarkus.knative.containers."containers".image-pull-secrets]`

[.description]
--
The image pull secret
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.name]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.name[quarkus.knative.containers."containers".mounts."mounts".name]`

[.description]
--
The name of the volumeName to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.path]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.path[quarkus.knative.containers."containers".mounts."mounts".path]`

[.description]
--
The path to mount.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.sub-path]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.sub-path[quarkus.knative.containers."containers".mounts."mounts".sub-path]`

[.description]
--
Path within the volumeName from which the container's volumeName should be mounted.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.read-only]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.mounts.-mounts-.read-only[quarkus.knative.containers."containers".mounts."mounts".read-only]`

[.description]
--
ReadOnly
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.secrets]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.secrets[quarkus.knative.containers."containers".env.secrets]`

[.description]
--
The optional list of Secret names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.configmaps]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.configmaps[quarkus.knative.containers."containers".env.configmaps]`

[.description]
--
The optional list of ConfigMap names to load environment variables from.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.fields-fields]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.fields-fields[quarkus.knative.containers."containers".env.fields]`

[.description]
--
The map associating environment variable names to their associated field references they take their value from.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.vars-vars]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.vars-vars[quarkus.knative.containers."containers".env.vars]`

[.description]
--
The map associating environment name to its associated value.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.from-secret]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.from-secret[quarkus.knative.containers."containers".env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.from-configmap]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.from-configmap[quarkus.knative.containers."containers".env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.with-key]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.env.mapping.-mapping-.with-key[quarkus.knative.containers."containers".env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.fields-fields]]`link:#quarkus-knative-knative-config_quarkus.knative.env.fields-fields[quarkus.knative.env.fields]`

[.description]
--
The map associating environment variable names to their associated field references they take their value from.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.vars-vars]]`link:#quarkus-knative-knative-config_quarkus.knative.env.vars-vars[quarkus.knative.env.vars]`

[.description]
--
The map associating environment name to its associated value.
--|`Map<String,String>` 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.from-secret]]`link:#quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.from-secret[quarkus.knative.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.from-configmap]]`link:#quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.from-configmap[quarkus.knative.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.with-key]]`link:#quarkus-knative-knative-config_quarkus.knative.env.mapping.-mapping-.with-key[quarkus.knative.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


h|[[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe]]link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe[The liveness probe]
This configuration section is optional
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.http-action-path[quarkus.knative.init-containers."init-containers".liveness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.exec-action[quarkus.knative.init-containers."init-containers".liveness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.tcp-socket-action[quarkus.knative.init-containers."init-containers".liveness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.initial-delay[quarkus.knative.init-containers."init-containers".liveness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.period[quarkus.knative.init-containers."init-containers".liveness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.timeout[quarkus.knative.init-containers."init-containers".liveness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.success-threshold[quarkus.knative.init-containers."init-containers".liveness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.liveness-probe.failure-threshold[quarkus.knative.init-containers."init-containers".liveness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`


h|[[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe]]link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe[The readiness probe]
This configuration section is optional
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.http-action-path[quarkus.knative.init-containers."init-containers".readiness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.exec-action[quarkus.knative.init-containers."init-containers".readiness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.tcp-socket-action[quarkus.knative.init-containers."init-containers".readiness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.initial-delay[quarkus.knative.init-containers."init-containers".readiness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.period[quarkus.knative.init-containers."init-containers".readiness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.timeout[quarkus.knative.init-containers."init-containers".readiness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.success-threshold[quarkus.knative.init-containers."init-containers".readiness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.init-containers.-init-containers-.readiness-probe.failure-threshold[quarkus.knative.init-containers."init-containers".readiness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`


h|[[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe]]link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe[The liveness probe]
This configuration section is optional
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.http-action-path[quarkus.knative.containers."containers".liveness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.exec-action[quarkus.knative.containers."containers".liveness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.tcp-socket-action[quarkus.knative.containers."containers".liveness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.initial-delay[quarkus.knative.containers."containers".liveness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.period[quarkus.knative.containers."containers".liveness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.timeout[quarkus.knative.containers."containers".liveness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.success-threshold[quarkus.knative.containers."containers".liveness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.liveness-probe.failure-threshold[quarkus.knative.containers."containers".liveness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`


h|[[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe]]link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe[The readiness probe]
This configuration section is optional
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.http-action-path]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.http-action-path[quarkus.knative.containers."containers".readiness-probe.http-action-path]`

[.description]
--
The http path to use for the probe For this to work, the container port also needs to be set Assuming the container port has been set (as per above comment), if execAction or tcpSocketAction are not set, an http probe will be used automatically even if no path is set (which will result in the root path being used)
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.exec-action]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.exec-action[quarkus.knative.containers."containers".readiness-probe.exec-action]`

[.description]
--
The command to use for the probe.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.tcp-socket-action]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.tcp-socket-action[quarkus.knative.containers."containers".readiness-probe.tcp-socket-action]`

[.description]
--
The tcp socket to use for the probe (the format is host:port).
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.initial-delay]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.initial-delay[quarkus.knative.containers."containers".readiness-probe.initial-delay]`

[.description]
--
The amount of time to wait before starting to probe.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`0`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.period]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.period[quarkus.knative.containers."containers".readiness-probe.period]`

[.description]
--
The period in which the action should be called.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.timeout]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.timeout[quarkus.knative.containers."containers".readiness-probe.timeout]`

[.description]
--
The amount of time to wait for each action.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10s`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.success-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.success-threshold[quarkus.knative.containers."containers".readiness-probe.success-threshold]`

[.description]
--
The success threshold to use.
--|int 
|`1`


a|icon:lock[title=Fixed at build time] [[quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.failure-threshold]]`link:#quarkus-knative-knative-config_quarkus.knative.containers.-containers-.readiness-probe.failure-threshold[quarkus.knative.containers."containers".readiness-probe.failure-threshold]`

[.description]
--
The failure threshold to use.
--|int 
|`3`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
